# simpleRag

./: Dockerfile  Ipcat_ingest.py  KshotAlgo_new.py  KshotAlgo_updated.py  Kshot_examples.xml  Kshot_examples.yaml  Kshot_mian.py  Kshot_prompt.py  Kshot_query.py  Kshot_rag.py  Kshot_router.py  Makefile  Postgresdb.py  Readme.md  SQLQueryBuilder_pypika.py  api-new.py  api.py  architecture.xml  build.sh  buildllmcontext.py  chainlit-app.py  chunk_merger.py  chunking_llm.py  classifier.py  config.py  context_resolver.py  design.txt  design3.txt  design9.py  destroy  docker-compose-new.yml  docker-compose.yml  embeddings.py  ensureSchema  exey  fastapi.py  fetchapi.py  final_orchestrator.py  hyde_main.py  hyde_query.py  (+91 more)
test/: test_context_resolution.py  test_rag_flow.py  test_retrieval.py
